k8s/dashboard/dashboard-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
#  annotations:
#    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: dashboard.k8s.exmaple.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 8080
